--- a/notebook-Dorah-RM.ipynb
+++ b/notebook-Dorah-RM.ipynb
@@ -247,10 +247,10 @@
    "source": [
     "ggplot(per_coin_heads, aes(x = coin, y = percentage)) +\n",
     "  geom_bar(stat = \"identity\", fill =\"skyblue\") +\n",
-    "  geom_hline(yintercept = mean(per_coin_heads$percentage), linetype = \"dashed\", color = \"red\") +  # Ligne horizontale à la moyenne\n",
-    "  geom_text(aes(x = 10, y = mean(per_coin_heads$percentage) + 1, label = paste(\"mean =\", round(mean(per_coin_heads$percentage), 2))), \n",
+    "  geom_hline(yintercept = mean(per_coin_heads$percentage), linetype = \"dashed\", color = \"red\") +  # Ligne horizontale à la moyenne # nolint\n",
+    "  geom_text(aes(x = 10, y = mean(per_coin_heads$percentage) + 1, label = paste(\"mean =\", round(mean(per_coin_heads$percentage), 2))),  # nolint\n",
     "            color = \"red\", size = 5, vjust = 0) + \n",
-    "  labs(title = \"Percentage of number of heads when the coin started heads per coin\", x = \"Coin\", y = \"Percentage\") +\n",
+    "  labs(title = \"Percentage of number of heads when the coin started heads per coin\", x = \"Coin\", y = \"Percentage\") + # nolint\n",
     "  theme_minimal() + \n",
     "  theme(axis.text.x = element_text(angle = 90, hjust = 1, , size = 12),\n",
     "  axis.text.y = element_text(size = 12), \n",
