--- a/logistic_regression_nb.ipynb
+++ b/logistic_regression_nb.ipynb
@@ -1740,101 +1740,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Anova"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "tags": [],
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A anova: 9 x 5</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>Resid. Df</th><th scope=col>Resid. Dev</th><th scope=col>Df</th><th scope=col>Deviance</th><th scope=col>Pr(&gt;Chi)</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>393</td><td>487.4174</td><td>  NA</td><td>           NA</td><td>          NA</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>348</td><td>351.4166</td><td>  45</td><td> 1.360008e+02</td><td>4.474182e-11</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>352</td><td>404.0511</td><td>  -4</td><td>-5.263451e+01</td><td>1.016247e-10</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>308</td><td>293.2636</td><td>  44</td><td> 1.107875e+02</td><td>1.114505e-07</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>197</td><td>180.8173</td><td> 111</td><td> 1.124463e+02</td><td>4.437909e-01</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>351</td><td>402.9106</td><td>-154</td><td>-2.220933e+02</td><td>2.717915e-04</td></tr>\n",
-       "\t<tr><th scope=row>7</th><td>392</td><td>486.4057</td><td> -41</td><td>-8.349508e+01</td><td>9.940122e-05</td></tr>\n",
-       "\t<tr><th scope=row>8</th><td>307</td><td>292.1330</td><td>  85</td><td> 1.942727e+02</td><td>1.557280e-10</td></tr>\n",
-       "\t<tr><th scope=row>9</th><td>307</td><td>292.1330</td><td>   0</td><td>-1.534772e-12</td><td>          NA</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A anova: 9 x 5\n",
-       "\\begin{tabular}{r|lllll}\n",
-       "  & Resid. Df & Resid. Dev & Df & Deviance & Pr(>Chi)\\\\\n",
-       "  & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t1 & 393 & 487.4174 &   NA &            NA &           NA\\\\\n",
-       "\t2 & 348 & 351.4166 &   45 &  1.360008e+02 & 4.474182e-11\\\\\n",
-       "\t3 & 352 & 404.0511 &   -4 & -5.263451e+01 & 1.016247e-10\\\\\n",
-       "\t4 & 308 & 293.2636 &   44 &  1.107875e+02 & 1.114505e-07\\\\\n",
-       "\t5 & 197 & 180.8173 &  111 &  1.124463e+02 & 4.437909e-01\\\\\n",
-       "\t6 & 351 & 402.9106 & -154 & -2.220933e+02 & 2.717915e-04\\\\\n",
-       "\t7 & 392 & 486.4057 &  -41 & -8.349508e+01 & 9.940122e-05\\\\\n",
-       "\t8 & 307 & 292.1330 &   85 &  1.942727e+02 & 1.557280e-10\\\\\n",
-       "\t9 & 307 & 292.1330 &    0 & -1.534772e-12 &           NA\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A anova: 9 x 5\n",
-       "\n",
-       "| <!--/--> | Resid. Df &lt;dbl&gt; | Resid. Dev &lt;dbl&gt; | Df &lt;dbl&gt; | Deviance &lt;dbl&gt; | Pr(&gt;Chi) &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|\n",
-       "| 1 | 393 | 487.4174 |   NA |            NA |           NA |\n",
-       "| 2 | 348 | 351.4166 |   45 |  1.360008e+02 | 4.474182e-11 |\n",
-       "| 3 | 352 | 404.0511 |   -4 | -5.263451e+01 | 1.016247e-10 |\n",
-       "| 4 | 308 | 293.2636 |   44 |  1.107875e+02 | 1.114505e-07 |\n",
-       "| 5 | 197 | 180.8173 |  111 |  1.124463e+02 | 4.437909e-01 |\n",
-       "| 6 | 351 | 402.9106 | -154 | -2.220933e+02 | 2.717915e-04 |\n",
-       "| 7 | 392 | 486.4057 |  -41 | -8.349508e+01 | 9.940122e-05 |\n",
-       "| 8 | 307 | 292.1330 |   85 |  1.942727e+02 | 1.557280e-10 |\n",
-       "| 9 | 307 | 292.1330 |    0 | -1.534772e-12 |           NA |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  Resid. Df Resid. Dev Df   Deviance      Pr(>Chi)    \n",
-       "1 393       487.4174     NA            NA           NA\n",
-       "2 348       351.4166     45  1.360008e+02 4.474182e-11\n",
-       "3 352       404.0511     -4 -5.263451e+01 1.016247e-10\n",
-       "4 308       293.2636     44  1.107875e+02 1.114505e-07\n",
-       "5 197       180.8173    111  1.124463e+02 4.437909e-01\n",
-       "6 351       402.9106   -154 -2.220933e+02 2.717915e-04\n",
-       "7 392       486.4057    -41 -8.349508e+01 9.940122e-05\n",
-       "8 307       292.1330     85  1.942727e+02 1.557280e-10\n",
-       "9 307       292.1330      0 -1.534772e-12           NA"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "anova(glmIntercept1, glmPerson1, glmCoin1, glmTotal1, glmTotal1Nested,glmCoinstart1,glmStart1, glmPersonstart1, glmAll1 , \n",
-    " test = \"LRT\") # person + coin "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Forward/Backward selection"
    ]
   },
@@ -2214,9 +2119,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
-    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tab1 <- AIC(glmIntercept1, glmTotal1Nested, glmTotal1, glmPerson1,\n",
+    "    glmCoin1, glmCoinstart1, glmStart1, glmPersonstart1, glmAll1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tab2 <- AICc(glmIntercept1, glmTotal1Nested, glmTotal1, glmPerson1,\n",
+    "    glmCoin1, glmCoinstart1, glmStart1, glmPersonstart1, glmAll1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tab3 <- BIC(glmIntercept1, glmTotal1Nested, glmTotal1, glmPerson1,\n",
+    "    glmCoin1, glmCoinstart1, glmStart1, glmPersonstart1, glmAll1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
     "vscode": {
      "languageId": "r"
     }
@@ -2226,543 +2172,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"AIC:\"\n"
+      "                 df      AIC  df     AICc  df      BIC\n",
+      "glmIntercept1     1 3173.179   1 3173.189   1 3177.155\n",
+      "glmTotal1Nested 197 3258.579 197 3656.599 197 4041.920\n",
+      "glmTotal1        86 3149.025  86 3197.768  86 3490.991\n",
+      "glmPerson1       46 3127.178  46 3139.639  46 3310.090\n",
+      "glmCoin1         42 3171.812  42 3182.103  42 3338.819\n",
+      "glmCoinstart1    43 3172.672  43 3183.483  43 3343.655\n",
+      "glmStart1         2 3174.167   2 3174.198   2 3182.120\n",
+      "glmPersonstart1  87 3149.894  87 3199.933  87 3495.837\n",
+      "glmAll1          87 3149.894  87 3199.933  87 3495.837\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "3173.17859965499"
-      ],
-      "text/latex": [
-       "3173.17859965499"
-      ],
-      "text/markdown": [
-       "3173.17859965499"
-      ],
-      "text/plain": [
-       "[1] 3173.179"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3127.17782055147"
-      ],
-      "text/latex": [
-       "3127.17782055147"
-      ],
-      "text/markdown": [
-       "3127.17782055147"
-      ],
-      "text/plain": [
-       "[1] 3127.178"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3171.81232729115"
-      ],
-      "text/latex": [
-       "3171.81232729115"
-      ],
-      "text/markdown": [
-       "3171.81232729115"
-      ],
-      "text/plain": [
-       "[1] 3171.812"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3149.02483751897"
-      ],
-      "text/latex": [
-       "3149.02483751897"
-      ],
-      "text/markdown": [
-       "3149.02483751897"
-      ],
-      "text/plain": [
-       "[1] 3149.025"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3258.57855090279"
-      ],
-      "text/latex": [
-       "3258.57855090279"
-      ],
-      "text/markdown": [
-       "3258.57855090279"
-      ],
-      "text/plain": [
-       "[1] 3258.579"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3174.16690362536"
-      ],
-      "text/latex": [
-       "3174.16690362536"
-      ],
-      "text/markdown": [
-       "3174.16690362536"
-      ],
-      "text/plain": [
-       "[1] 3174.167"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3149.89421923294"
-      ],
-      "text/latex": [
-       "3149.89421923294"
-      ],
-      "text/markdown": [
-       "3149.89421923294"
-      ],
-      "text/plain": [
-       "[1] 3149.894"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3172.6718226675"
-      ],
-      "text/latex": [
-       "3172.6718226675"
-      ],
-      "text/markdown": [
-       "3172.6718226675"
-      ],
-      "text/plain": [
-       "[1] 3172.672"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3149.89421923294"
-      ],
-      "text/latex": [
-       "3149.89421923294"
-      ],
-      "text/markdown": [
-       "3149.89421923294"
-      ],
-      "text/plain": [
-       "[1] 3149.894"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"AICc:\"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "3173.18880373663"
-      ],
-      "text/latex": [
-       "3173.18880373663"
-      ],
-      "text/markdown": [
-       "3173.18880373663"
-      ],
-      "text/plain": [
-       "[1] 3173.189"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3139.63891565233"
-      ],
-      "text/latex": [
-       "3139.63891565233"
-      ],
-      "text/markdown": [
-       "3139.63891565233"
-      ],
-      "text/plain": [
-       "[1] 3139.639"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3182.10292558175"
-      ],
-      "text/latex": [
-       "3182.10292558175"
-      ],
-      "text/markdown": [
-       "3182.10292558175"
-      ],
-      "text/plain": [
-       "[1] 3182.103"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3197.76750852874"
-      ],
-      "text/latex": [
-       "3197.76750852874"
-      ],
-      "text/markdown": [
-       "3197.76750852874"
-      ],
-      "text/plain": [
-       "[1] 3197.768"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3656.59895906606"
-      ],
-      "text/latex": [
-       "3656.59895906606"
-      ],
-      "text/markdown": [
-       "3656.59895906606"
-      ],
-      "text/plain": [
-       "[1] 3656.599"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3174.19759416244"
-      ],
-      "text/latex": [
-       "3174.19759416244"
-      ],
-      "text/markdown": [
-       "3174.19759416244"
-      ],
-      "text/plain": [
-       "[1] 3174.198"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3199.93343491921"
-      ],
-      "text/latex": [
-       "3199.93343491921"
-      ],
-      "text/markdown": [
-       "3199.93343491921"
-      ],
-      "text/plain": [
-       "[1] 3199.933"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3183.48325123893"
-      ],
-      "text/latex": [
-       "3183.48325123893"
-      ],
-      "text/markdown": [
-       "3183.48325123893"
-      ],
-      "text/plain": [
-       "[1] 3183.483"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3199.93343491921"
-      ],
-      "text/latex": [
-       "3199.93343491921"
-      ],
-      "text/markdown": [
-       "3199.93343491921"
-      ],
-      "text/plain": [
-       "[1] 3199.933"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"BIC:\"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "3177.15495056429"
-      ],
-      "text/latex": [
-       "3177.15495056429"
-      ],
-      "text/markdown": [
-       "3177.15495056429"
-      ],
-      "text/plain": [
-       "[1] 3177.155"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3310.08996237917"
-      ],
-      "text/latex": [
-       "3310.08996237917"
-      ],
-      "text/markdown": [
-       "3310.08996237917"
-      ],
-      "text/plain": [
-       "[1] 3310.09"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3338.81906548166"
-      ],
-      "text/latex": [
-       "3338.81906548166"
-      ],
-      "text/markdown": [
-       "3338.81906548166"
-      ],
-      "text/plain": [
-       "[1] 3338.819"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3490.99101571859"
-      ],
-      "text/latex": [
-       "3490.99101571859"
-      ],
-      "text/markdown": [
-       "3490.99101571859"
-      ],
-      "text/plain": [
-       "[1] 3490.991"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "4041.91968003449"
-      ],
-      "text/latex": [
-       "4041.91968003449"
-      ],
-      "text/markdown": [
-       "4041.91968003449"
-      ],
-      "text/plain": [
-       "[1] 4041.92"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3182.11960544395"
-      ],
-      "text/latex": [
-       "3182.11960544395"
-      ],
-      "text/markdown": [
-       "3182.11960544395"
-      ],
-      "text/plain": [
-       "[1] 3182.12"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3495.83674834186"
-      ],
-      "text/latex": [
-       "3495.83674834186"
-      ],
-      "text/markdown": [
-       "3495.83674834186"
-      ],
-      "text/plain": [
-       "[1] 3495.837"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3343.65491176731"
-      ],
-      "text/latex": [
-       "3343.65491176731"
-      ],
-      "text/markdown": [
-       "3343.65491176731"
-      ],
-      "text/plain": [
-       "[1] 3343.655"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "3495.83674834186"
-      ],
-      "text/latex": [
-       "3495.83674834186"
-      ],
-      "text/markdown": [
-       "3495.83674834186"
-      ],
-      "text/plain": [
-       "[1] 3495.837"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(\"AIC:\")\n",
-    "AIC(glmIntercept1)\n",
-    "AIC(glmPerson1)\n",
-    "AIC(glmCoin1)\n",
-    "AIC(glmTotal1)\n",
-    "AIC(glmTotal1Nested)\n",
-    "AIC(glmStart1)\n",
-    "AIC(glmPersonstart1)\n",
-    "AIC(glmCoinstart1)\n",
-    "AIC(glmAll1)\n",
-    "\n",
-    "print(\"AICc:\")\n",
-    "AICc(glmIntercept1)\n",
-    "AICc(glmPerson1)\n",
-    "AICc(glmCoin1)\n",
-    "AICc(glmTotal1)\n",
-    "AICc(glmTotal1Nested)\n",
-    "AICc(glmStart1)\n",
-    "AICc(glmPersonstart1)\n",
-    "AICc(glmCoinstart1)\n",
-    "AICc(glmAll1)\n",
-    "\n",
-    "print(\"BIC:\")\n",
-    "BIC(glmIntercept1)\n",
-    "BIC(glmPerson1)\n",
-    "BIC(glmCoin1)\n",
-    "BIC(glmTotal1)\n",
-    "BIC(glmTotal1Nested)\n",
-    "BIC(glmStart1)\n",
-    "BIC(glmPersonstart1)\n",
-    "BIC(glmCoinstart1)\n",
-    "BIC(glmAll1)"
+    "tab_lr_selection <- cbind(tab1, tab2, tab3)\n",
+    "print(tab_lr_selection)"
    ]
   },
   {
